fixing more typos in recent post

--- a/posts/2024-04-02-data-viz-course/index.qmd
+++ b/posts/2024-04-02-data-viz-course/index.qmd
@@ -283,7 +283,7 @@ knitr::include_graphics("media/gh-classroom-ex-assignment.png")
 ```
 
 ::: {.center-text .small-text}
-*A view of the teacher dashboard, where I'm able to access each of my students repositories for a particular homework assignment.*
+*A view of the teacher dashboard, where I'm able to access each of my students' repositories for a particular homework assignment.*
 :::
 
 For assignments submitted via GitHub Classroom, **we provided feedback largely by copying and commenting on a submitted `.qmd` file** following this workflow:
@@ -333,7 +333,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 ### Some things that worked well 
 
-- **Specs grading!** -- I would absolutely implement it again (for this course, and / or others). While it does require more work up from (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade in the course), I really do think it allowed me to focus on the more fun (and important) parts of teaching (e.g. providing constructive feedback on assignments, soliciting and acting on student feedback throughout the course) 
+- **Specs grading!** -- I would absolutely implement it again (for this course, and / or others). While it does require more work up front (e.g. building clear assignment rubrics, determining exactly what a student needs to do to earn a particular grade in the course), I really do think it allowed me to focus on the more fun (and important) parts of teaching (e.g. providing constructive feedback on assignments, soliciting and acting on student feedback throughout the course) 
 
 - **Randomly assigning new "learning partners" for each lecture** -- learning partners were a mix of accountability-buddies, people to help troubleshoot with, and group mates for any in-class activities. I was originally motivated to facilitate student mixing (folks tend to sit in the same seats with the same people throughout the year) and encourage students to help one another problem solve. These were super popular -- students consistently requested more opportunities to engage with their learning partners throughout the course. I also received written feedback from non-MEDS students that it made meeting people and integrating with the MEDS cohort much easier. 
 
@@ -370,7 +370,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Move some data wrangling to pre-class prep.** Year after year, students have requested more in-class data wrangling practice across all courses. I started the quarter off by live-coding my way through all data wrangling (ahead of our in-class data viz practice), but it ultimately took up a lot of really valuable time that I preferred to spend on data viz itself. One student eventually suggested that I provide the wrangling code ahead of time, require students to review it on their own as part of their pre-class prep activities, then reserve ~10min for answering any questions in class. This seemed to work quite well, and I'm excited to try it out a bit more next year. I'll likely still plan to do a bit of in-class wrangling at the start of the quarter, or if there are particularly new methods that I'd like to introduce.
 
-- **Allow myself more time to review materials ahead of each class.** This one may seem a bit silly, but it's an important reminder for my future self! I had built a lot of content before the course began, and I spent most "down time" throughout the quarter trying to prep ahead. This meant that I'd often only start reviewing lecture materials the Sunday evening before teaching on Monday...each Sunday, I'd tell myself that it was plenty of time, and each Sunday I'd realize that it most certainly was not. I stressed a lot about relearning the content, fixing code errors that I hadn't caught when I first built the materials, and frantically looking for more resources to better understand things ahead of questions I thought might come up in class. I *am* totally hopeful that this will get easier each time I teach the course, but did want to note this as an important consideration for anyone who may be teaching something for the first time.
+- **Allow myself more time to review materials ahead of each class.** This one may seem a bit silly, but it's an important reminder for my future self! I had built a lot of content before the course began, and I spent most "down time" throughout the quarter trying to prep ahead. This meant that I'd often only start reviewing upcoming lecture materials the Sunday evening before teaching on Monday...each Sunday, I'd tell myself that it was plenty of time, and each Sunday I'd realize that it most certainly was not. I stressed a lot about relearning the content, fixing code errors that I hadn't caught when I first built the materials, and frantically looking for more resources to better understand things ahead of questions I thought might come up in class. I *am* totally hopeful that this will get easier each time I teach the course, but did want to note this as an important consideration for anyone who may be teaching something for the first time.
 
 ### Some final thoughts on teaching, more generally
 
@@ -378,7 +378,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 - **Teaching is a really vulnerable act!** No matter how much prep you do, you'll get asked questions that you don't know the answers to, be confronted with situations you don't quite know how to navigate, and likely make (many) mistakes. I prepped *so* much, in part because I was scared of making any mistakes (which I of course made anyway). This quarter was a great reminder that transparency is key, and that more often than not, students are really understanding. Taking a bit time to respond to any outstanding questions in the class Slack channel, or explaining the reasoning behind policy decisions went a long way.
 
-- **You're going to get *a lot* of feedback.** Some of it will certainly help to improve your course and teaching approaches. But it's also okay to consider, then ignore feedback too. Ultimately, we are tasked with thinking *really* long and hard about what topics to teach, how to teach them, course policies, etc. and we make deliberate decisions in our planning. It's okay to stand by those decisions. While not teaching-specific, I really appreciated Dorie Clark's piece on [When it's OK to Ignore Feedback](https://hbr.org/2015/08/when-its-ok-to-ignore-feedback) (Harvard Business Review). 
+- **You're going to get *a lot* of feedback.** Some of it will certainly help to improve your course and teaching approaches. But it's also okay to consider then ignore feedback too. Ultimately, we are tasked with thinking *really* long and hard about what topics to teach, how to teach them, course policies, etc. and we make deliberate decisions in our planning. It's okay to stand by those decisions. While not teaching-specific, I really appreciated Dorie Clark's piece on [When it's OK to Ignore Feedback](https://hbr.org/2015/08/when-its-ok-to-ignore-feedback) (Harvard Business Review). 
 
 - **Burnout is real. Find ways to take care of yourself.** There was a point around week 7 where I wanted to think about anything other than putting together my next lecture. The remaining topics really excited me, but I was *struggling mightily* to focus. I stressed for a while about it, but eventually found myself some grace. I spent a couple days working on a completely unrelated project, walked my dog in the middle of the work day, took slightly longer lunch breaks, and maintained my typical workout schedule. It was a much needed change of pace that helped me find my groove again.
 
@@ -386,7 +386,7 @@ I already mentioned a fair number of tools that made teaching this course possib
 
 This may (definitely) be sappy, but I truly would not be where I am or doing what I'm doing without the support of incredible friends, colleagues, and the online data science community. You all make learning such a joy and I am truly grateful to have so many brilliant educators and thinkers to look up to. There are too many names to list here, but I do want to give shout outs to a few folks who made getting started on this class a bit less intimidating:
 
-Figuring out where to start is often the hardest part, and finding inspiration from educators who openly shared their materials online was a true blessing. Many many thanks to **[Meghan Hall](https://meghan.rbind.io/)** and **[Andrew Heiss](https://www.andrewheiss.com/)**, whose courses ([CMU 36-315: Statistical Graphics & Visualization](https://cmu-36315.netlify.app/) & [PMAP 8101: Data Visualization with R](https://datavizs23.classes.andrewheiss.com/)) provided some much needed inspiration and helped me find my feet. I reference a whole lot of work by **[Cédric Scherer](https://www.cedricscherer.com/)**, but was especially grateful to come across his jam-packed 2-day workshop, [Graphic Designs with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/) from rstudio::conf(2022). 
+Figuring out where to start is often the hardest part, and finding inspiration from educators who openly shared their materials online was a true blessing. Many many thanks to **[Meghan Hall](https://meghan.rbind.io/)** and **[Andrew Heiss](https://www.andrewheiss.com/)**, whose courses ([CMU 36-315: Statistical Graphics & Visualization](https://cmu-36315.netlify.app/) & [PMAP 8101: Data Visualization with R](https://datavizs23.classes.andrewheiss.com/)) provided some much needed inspiration and helped me find my feet. I reference a whole lot of work by **[Cédric Scherer](https://www.cedricscherer.com/)**, but was especially grateful to come across his jam-packed 2-day workshop, [Graphic Designs with ggplot2](https://rstudio-conf-2022.github.io/ggplot2-graphic-design/), from rstudio::conf(2022). 
 
 Teaching is truly an art, and I'm lucky to be surrounded by folks who think really hard about how to do it well. Thank you to **[Nate Emery](http://nathanemery.com/)**, who first introduced me to the concept of alternative grading and gave me the resources and encouragement to give it a try myself. To my colleague, dear friend, and biggest hype woman, **[An Bui](https://an-bui.com/)**, who is both a brilliant data scientist and deeply intentional educator. Adopting her student self-reflection exercises was one of my favorite parts of this course. And of course, to **[Allison Horst](https://allisonhorst.github.io/)**, who has a gift like no other -- her approach to teaching has inspired me since my earliest days as a budding data scientist and educator. Find her [artwork](https://allisonhorst.com/) adorning nearly every page of the course website. 
 
