--- a/courses/eds-240-data-viz/index.qmd
+++ b/courses/eds-240-data-viz/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "EDS 240 - Data Visualization & Communication"
 description: |
-  materials for EDS 240, a 4-unit graduate-level course taught at the Bren School for Environmental Science & Management
+  a 4-unit core course covering the basic principles for effective communication through data viz + lots of `{ggplot2}`!
 categories: [UCSB, data visualization, R, ggplot]
 image: horst-eco-r4ds.png
 draft: false
@@ -11,7 +11,7 @@ draft: false
 
 <br>
 
-# Course Description
+# Course description
 
 Effectively communicating your work in a responsible, accessible and visually-pleasing way is often (if not, always) a central part of data science. This course will focus on the basic principles for effective communication through data visualization and using technical tools and workflows for creating and sharing data visualizations with diverse audiences.
 
@@ -19,7 +19,7 @@ By the end of this course, learners should be able to:
 
 - Identify which types of visualizations are most appropriate for your data and your audience
 - Prepare (e.g. clean, explore, wrangle) data so that it’s appropriately formatted for building data visualizations
-- Build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically {ggplot2} + ggplot2 extension packages
+- Build effective, responsible, accessible, and aesthetically-pleasing, visualizations using the R programming language, and specifically `{ggplot2}` + ggplot2 extension packages
 - Write code from scratch and read and adapt code written by others
 - Apply a DEI (Diversity, Equity & Inclusion) lens to the process of designing data visualizations
 - Assess, critique, and provide constructive feedback on data visualizations
@@ -37,6 +37,5 @@ knitr::include_graphics("horst-ggplot-masterpiece.png")
 
 # When is this taught?
 
-EDS 240 is a core course of the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program, taught in Winter quarter each year (since the inaugural cohort, Winter 2022). I am re-envisioning and teaching it for the first time in Winter 2024. Materials are still very much under development (as of Dec 2023) and untested -- I'm looking forward to reflecting on what worked and what to improve on after I finish up teaching in March 2024.
-
+EDS 240 is a [core course](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds/meds-courses) of the [Master of Environmental Data Science](https://bren.ucsb.edu/masters-programs/master-environmental-data-science/academics-meds) (MEDS) program, taught in Winter quarter each year (since the inaugural cohort, Winter 2022). I had so much fun redesigning and teaching it for the first time in Winter 2024, and I reflect on my experiences in my blog post, [Buiding (and teaching) a graduate-level data science course](https://samanthacsik.github.io/posts/2024-04-02-data-viz-course/)!
 
