--- a/courses/eds-296-ds-portfolios/index.qmd
+++ b/courses/eds-296-ds-portfolios/index.qmd
@@ -1,7 +1,7 @@
 ---
 title: "EDS 296 - Data science tools for building professional online portfolios"
 description: |
-  a 2-unit course on using building, customizing, and maintaining professional online data science portfolios (currently under development!)
+  a 2-unit course on building, customizing, and maintaining professional online data science portfolios (currently under development!)
 categories: [UCSB, data-science-portfolio, Quarto, GitHub]
 image: quarto-github.png
 draft: false
