--- a/courses/eds-240-data-viz/index.qmd
+++ b/courses/eds-240-data-viz/index.qmd
@@ -2,7 +2,7 @@
 title: "EDS 240 - Data Visualization & Communication"
 description: |
   a 4-unit core course covering the basic principles for effective communication through data viz + lots of `{ggplot2}`!
-categories: [UCSB, data visualization, R, ggplot]
+categories: [UCSB, data-visualization, R, ggplot]
 image: horst-eco-r4ds.png
 draft: false
 ---
