--- a/talks_workshops/2023-03-16-ggplot2/index.qmd
+++ b/talks_workshops/2023-03-16-ggplot2/index.qmd
@@ -10,7 +10,7 @@ author:
     affiliation-url: https://ucsb-meds.github.io/
 date: 2023-03-16
 slug: csik2023ggplot2
-categories: [MEDS, R, ggplot2, data visualization]
+categories: [MEDS, R, ggplot2, data-visualization]
 image: ahorst_ggplot2_small.png
 ---
 
