--- a/courses/eds-296-ds-portfolios/index.qmd
+++ b/courses/eds-296-ds-portfolios/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "EDS 296 - Data science tools for building professional online portfolios"
+title: "EDS 296-1F - Data science tools for building professional online portfolios"
 description: |
   a 2-unit course on building, customizing, and maintaining professional online data science portfolios (currently under development!)
 categories: [UCSB, data-science-portfolio, Quarto, GitHub]
